[gd_scene load_steps=6 format=2]

[ext_resource path="res://Code/Ball.gd" type="Script" id=1]
[ext_resource path="res://Sprites/WhiteBall.png" type="Texture" id=2]
[ext_resource path="res://Objects/Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/light_ball_01.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[node name="Ball" type="RigidBody2D" groups=[
"Balls",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 2
contacts_reported = 423
contact_monitor = true
sleeping = false
can_sleep = false
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 0.273438, 0.273438, 0.273438, 1 )
z_index = -2
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 0
wait_time = 0.05
one_shot = false
autostart = true

[node name="Trail" parent="." index="3" instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="BounceSound" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Bounce"
area_mask = 1

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]

[connection signal="body_shape_entered" from="." to="." method="_on_Ball_body_shape_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


